# Auto-Inter

./: package-lock.json  package.json
app/: globals.css  layout.tsx
app/(auth)/: layout.tsx
app/(auth)/signin/: page.tsx
app/(auth)/signup/: page.tsx
app/(root)/: layout.tsx  page.tsx
app/(root)/feedback/[feedbackId]/: page.tsx
app/(root)/interview/: page.tsx
app/(root)/interview/[interviewId]/: page.tsx
app/api/debug-interviews/: route.ts
app/api/generate-feedback/: route.ts
app/api/livekit-token/: route.ts
app/api/retake-interview/: route.ts
app/api/save-transcription/: route.ts
app/api/vapi/generate/: route.ts
components/: Agent.tsx  Authform.client.ts  Authform.tsx  DisplayTechIcons.tsx  FeedbackReport.tsx  Formfield.tsx  InterviewCard.tsx  RetakeInterviewButton.tsx
components/providers/: ToastProvider.tsx
constants/: index.ts
firebase/: admin.ts  client.ts
lib/: vapi.sdk.ts
lib/Actions/: auth.actions.ts  interview.actions.ts
livekit-agent/: .gitignore  Dockerfile  README.md  package.json  pyproject.toml
livekit-agent/src/: agent.py
types/: index.d.ts  speech-recognition.d.ts  vapi.d.ts
